# bubble

./: .gitignore  CMakeLists.txt  Readme.md  info.cmake
all/: CMakeLists.txt
app/: CMakeLists.txt  benchmarks.cpp  benchmarks_alpha.cpp  benchmarks_ordered.cpp  benchmarks_ordered_alpha.cpp  check_oneway.cpp  ingest.cpp  main.cpp.old  naive_memgraph.h  run_tc.cpp  useful_configs.h
app/algorithm/: bfs.cpp  bfs_oneway.cpp  bfs_oneway_32.cpp  connected_components.cpp  pagerank_pull_32.cpp  pagerank_pull_oneway.cpp  pagerank_push.cpp
app/data/: convert_to_b32.cpp  convert_to_binary.cpp  convert_to_blaze_gr.cpp  convert_to_csr.cpp.old  convert_to_text.cpp  convert_to_undirect.cpp  dis_count.cpp  distribution.cpp  random_edge_list.cpp  shuffle_binary.cpp  sort_binary.cpp  summarize.cpp  summarize_unit.cpp
app/motivation/: dataset_skewness.cpp  dispatcher_sort.cpp  dispatcher_st.cpp  mini_process_shuffle.cpp  mini_process_sort.cpp  random_insertion_gen.cpp  random_insertion_uniform.cpp  work_imbalance.cpp
include/: algorithms.h  checker.h  common.h  concepts.h  config.h  datatype.h  env.h  filename.h  formatter.h  graph.h  importer.h  memory_index.h  mergeable_ranges.h  metrics.h  ring_buffer.h  small_bitset.h  sort.h  vec.h
include/algorithms/: bfs.h  cc.h  pr.h  tc.h
include/algorithms/gapbs/: platform_atomics.h  pr.h  pvector.h  tc.h  util.h
include/env/: base.h  fs.h  memory.h  thread.h
script/: 1-motivation-a-plot.py  1-motivation-a.py  1-motivation-b-plot.py  1-motivation-b.py  1-motivation-c-plot.py  1-motivation-c.py  1-motivation-c0-plot.py  1-motivation-plot.py  2-exp-1-basic_benchmarks-plot.py  2-exp-2-tc-plot.py  2-exp-3-scalability-plot.py  2-exp-4-memory-print.py  2-exp-5-alpha-plot.py  alpha.py  basic_benchmarks-plot.py  basic_benchmarks.py  dataset.py  datasets.py  exp.py  generate_datasets_from_webgraph.py  meta.py  monitor.py  parse_output.py  run_tc.py  scalability-plot.py  scalability.py  scalability_fast.py  toy.py  unsort.py
script/bubble/: alpha.sh  run_tc.sh  scale.sh  unsort.sh
script/bubble_ordered/: scale.sh  unsort.sh
script/graphone/: scale.sh
script/lsgraph/: run_tc.sh  scale.sh
script/xpgraph/: basic_benchmarks.sh  scale.sh
